--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
+    
 img {
-    width:60%
+    width: 600px;
+    margin: 0 auto;
 }
 body {
-    background-color: #f7cac9;
+    background-color: #F7CAC9;
+    font-family: "Lora", serif;
+    font-size: 15px;
+}
+
+h1 {
+    width: 1000px;
+    margin: 0 auto;
+}
+.wrapper-main {
+    width: 1000px;
+    margin: 0 auto;
 }
