--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
-    
+
 img {
     width: 600px;
     margin: 0 auto;
 }
+
 body {
     background-color: #F7CAC9;
     font-family: "Lora", serif;
@@ -14,7 +15,12 @@ h1 {
     width: 1000px;
     margin: 0 auto;
 }
-.wrapper-main {
-    width: 1000px;
-    margin: 0 auto;
+
+nav  a{
+    color: black;
+}
+@media (max-width: 556px) {
+    main img {
+        width: 75%
+    }
 }
